--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# data files
+images/
+processed_data/
+t5-dsl-generator/
+results/
+*.png
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
