--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,105 @@
-requests
-python-dotenv
-numpy
-pillow
-pandas
-scikit-learn
-tensorflow
-datasets
-transformers
-sentencepiece
-torch
-tf-keras
-transformers[torch]
-python-opencv
-bs4
-tqdm
-bitsandbytes
+# pip freeze
+absl-py==2.1.0
+accelerate==1.3.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+altair==5.5.0
+astunparse==1.6.3
+attrs==25.1.0
+beautifulsoup4==4.13.3
+bitsandbytes==0.45.2
+blinker==1.9.0
+bs4==0.0.2
+cachetools==5.5.1
+certifi==2025.1.31
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+datasets==3.3.0
+dill==0.3.8
+filelock==3.17.0
+flatbuffers==25.2.10
+frozenlist==1.5.0
+fsspec==2024.12.0
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-pasta==0.2.0
+grpcio==1.70.0
+h5py==3.12.1
+huggingface-hub==0.28.1
+idna==3.10
+Jinja2==3.1.5
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keras==3.8.0
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
+namex==0.0.8
+narwhals==1.26.0
+networkx==3.4.2
+numpy==2.0.2
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
+optree==0.14.0
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+propcache==0.2.1
+protobuf==5.29.3
+psutil==7.0.0
+pyarrow==19.0.0
+pydeck==0.9.1
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.22.3
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentencepiece==0.2.0
+setuptools==75.8.0
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.6
+streamlit==1.42.0
+sympy==1.13.1
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow_intel==2.18.0
+termcolor==2.5.0
+tf_keras==2.18.0
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+toml==0.10.2
+torch==2.6.0
+tornado==6.4.2
+tqdm==4.67.1
+transformers==4.49.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
+xxhash==3.5.0
+yarl==1.18.3
