--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# pip freeze
 absl-py==2.1.0
 accelerate==1.3.0
 aiohappyeyeballs==2.4.6
@@ -17,10 +16,14 @@ chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+coloredlogs==15.0.1
+contourpy==1.3.1
+cycler==0.12.1
 datasets==3.3.0
 dill==0.3.8
 filelock==3.17.0
 flatbuffers==25.2.10
+fonttools==4.57.0
 frozenlist==1.5.0
 fsspec==2024.12.0
 gast==0.6.0
@@ -30,16 +33,19 @@ google-pasta==0.2.0
 grpcio==1.70.0
 h5py==3.12.1
 huggingface-hub==0.28.1
+humanfriendly==10.0
 idna==3.10
 Jinja2==3.1.5
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 keras==3.8.0
+kiwisolver==1.4.8
 libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 mdurl==0.1.2
 ml-dtypes==0.4.1
 mpmath==1.3.0
@@ -49,6 +55,8 @@ namex==0.0.8
 narwhals==1.26.0
 networkx==3.4.2
 numpy==2.0.2
+onnx==1.17.0
+onnxruntime-directml==1.21.0
 opencv-python==4.11.0.86
 opt_einsum==3.4.0
 optree==0.14.0
@@ -61,6 +69,8 @@ psutil==7.0.0
 pyarrow==19.0.0
 pydeck==0.9.1
 Pygments==2.19.1
+pyparsing==3.2.3
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
